# Tests for configs/compiled_config
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_compiled_config.c)
  add_executable(test_compiled_config configs/test_compiled_config.c)
  # Ensure project include headers are visible for tests
  target_include_directories(test_compiled_config PRIVATE ${CMAKE_SOURCE_DIR}/include)
  # Link against library and yaml if available
  if(TARGET libyaml::yaml)
      target_link_libraries(test_compiled_config PRIVATE leuko_lib libyaml::yaml pthread)
  elseif(TARGET yaml)
      target_link_libraries(test_compiled_config PRIVATE leuko_lib yaml pthread)
  else()
      target_link_libraries(test_compiled_config PRIVATE leuko_lib pthread)
  endif()
endif()

# walker test
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_walker.c)
  add_executable(test_walker configs/test_walker.c)
  target_include_directories(test_walker PRIVATE ${CMAKE_SOURCE_DIR}/include)
  if(TARGET libyaml::yaml)
      target_link_libraries(test_walker PRIVATE leuko_lib libyaml::yaml pthread)
  elseif(TARGET yaml)
      target_link_libraries(test_walker PRIVATE leuko_lib yaml pthread)
  else()
      target_link_libraries(test_walker PRIVATE leuko_lib pthread)
  endif()
  add_test(NAME test_walker COMMAND test_walker)
endif()

# normalize rules test
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_normalize_rules.c)
  add_executable(test_normalize_rules configs/test_normalize_rules.c)
  target_include_directories(test_normalize_rules PRIVATE ${CMAKE_SOURCE_DIR}/include)
  if(TARGET libyaml::yaml)
      target_link_libraries(test_normalize_rules PRIVATE leuko_lib libyaml::yaml pthread)
  elseif(TARGET yaml)
      target_link_libraries(test_normalize_rules PRIVATE leuko_lib yaml pthread)
  else()
      target_link_libraries(test_normalize_rules PRIVATE leuko_lib pthread)
  endif()
  add_test(NAME test_normalize_rules COMMAND test_normalize_rules)
endif()

# precompile patterns test
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_precompile_patterns.c)
  add_executable(test_precompile_patterns configs/test_precompile_patterns.c)
  target_include_directories(test_precompile_patterns PRIVATE ${CMAKE_SOURCE_DIR}/include)
  if(TARGET libyaml::yaml)
      target_link_libraries(test_precompile_patterns PRIVATE leuko_lib libyaml::yaml pthread)
  elseif(TARGET yaml)
      target_link_libraries(test_precompile_patterns PRIVATE leuko_lib yaml pthread)
  else()
      target_link_libraries(test_precompile_patterns PRIVATE leuko_lib pthread)
  endif()
  add_test(NAME test_precompile_patterns COMMAND test_precompile_patterns)
endif()

if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_precompile_category_rule_patterns.c)
  add_executable(test_precompile_category_rule_patterns configs/test_precompile_category_rule_patterns.c)
  target_include_directories(test_precompile_category_rule_patterns PRIVATE ${CMAKE_SOURCE_DIR}/include)
  if(TARGET libyaml::yaml)
      target_link_libraries(test_precompile_category_rule_patterns PRIVATE leuko_lib libyaml::yaml pthread)
  elseif(TARGET yaml)
      target_link_libraries(test_precompile_category_rule_patterns PRIVATE leuko_lib yaml pthread)
  else()
      target_link_libraries(test_precompile_category_rule_patterns PRIVATE leuko_lib pthread)
  endif()
  add_test(NAME test_precompile_category_rule_patterns COMMAND test_precompile_category_rule_patterns)
endif()

# parse -> node test
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/sources/test_parse_to_node.c)
  add_executable(test_parse_to_node sources/test_parse_to_node.c)
  target_include_directories(test_parse_to_node PRIVATE ${CMAKE_SOURCE_DIR}/include)
  if(TARGET libyaml::yaml)
      target_link_libraries(test_parse_to_node PRIVATE leuko_lib libyaml::yaml pthread)
  elseif(TARGET yaml)
      target_link_libraries(test_parse_to_node PRIVATE leuko_lib yaml pthread)
  else()
      target_link_libraries(test_parse_to_node PRIVATE leuko_lib pthread)
  endif()
  add_test(NAME test_parse_to_node COMMAND test_parse_to_node)
endif()

# generated registry test
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_generated_registry.c)
  add_executable(test_generated_registry configs/test_generated_registry.c)
  target_include_directories(test_generated_registry PRIVATE ${CMAKE_SOURCE_DIR}/include)
  target_link_libraries(test_generated_registry PRIVATE leuko_lib pthread)
  add_test(NAME test_generated_registry COMMAND test_generated_registry)
endif()

# materialize test
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_materialize.c)
  add_executable(test_materialize configs/test_materialize.c)
  target_include_directories(test_materialize PRIVATE ${CMAKE_SOURCE_DIR}/include)
  target_link_libraries(test_materialize PRIVATE leuko_lib pthread)
  add_test(NAME test_materialize COMMAND test_materialize)
endif()

# rule apply_merged tests
if(EXISTS ${CMAKE_SOURCE_DIR}/tests/configs/test_rule_apply_merged.c)
  add_executable(test_rule_apply_merged configs/test_rule_apply_merged.c)
  target_include_directories(test_rule_apply_merged PRIVATE ${CMAKE_SOURCE_DIR}/include)
  target_link_libraries(test_rule_apply_merged PRIVATE leuko_lib pthread)
  add_test(NAME test_rule_apply_merged COMMAND test_rule_apply_merged)
endif()
